--- a/index.html
+++ b/index.html
@@ -1,35 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <style>
-	* {
-      box-sizing: border-box;
-      }
-    body {
-      background-color: lightgray;
-      font-family: Arial;
-      padding: 10px;
-      }
-    .centrar {
-      text-align: center;
-      }
-    td,th{
-      padding: 2px;
-      text-align: left;
-      border: 0px solid;
-      border-color: #444444;
-      }
-    li{
-      padding: 5px;
-      }
-    table {
-      width: 75%;
-      padding: 2px;
-      <!-- border-collapse: collapse; -->
-      <!-- border-spacing: 15px; -->
-      <!-- border-color: coral; -->
-      }
-  </style>
+  <title>Paco Ruvalcaba</title>
+  <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
     <div class="centrar">
@@ -55,6 +28,6 @@
     <h1>Posgrado en Ingeniería Mecatrónica</h1>
     <hr><br>
     <h1>Cursos de Capacitación</h1>
-
+    <!-- <img src="https://kroki.io/plantuml/svg/eNqdVktv00AQvvdXrIxQpYikEjcqqAqliAOVykNcEIom64m9dB9mH2nDr2c2Xm8Se1shDlHs3Xl-882ML50H65XQtYLuZPbjmRRN61cy4E9WVY3wVXUyGx9DXe-OZ_HZ8lZszMI_9KJj2UV_Oluyt43FBizzpjaOSfolXTf1sLKgeZuc9C9LDQqTqSuLwIIGZkEB40YzbdTKYtbcCRfjmafQp2bJ7rUUBAUw-V-WNznVm4DOW2AoWZBeKEPX3CgV4WSoGYe691AyAxMzhBgQYvSLOu4FgcdBomNbZlEZD-5kCiFvkd-ZUK7KfDWgUMhrivCWOWQq4AZZC1zExCQ8Upuvg-S_VmgctzQaM71a7zt3fnZGTGzDakEgnkmxoreXw39G68p0Auw86hPLgiZsOuOEN1aYCLoUGqHgL9WlhJIaUGLVN3zwpigErCg3EqvFet1LLdlrJ_7g-auLW6DibtBSPdnvgBHkFpgyJCuIIoZ1aA0Bly6qjjIilbpkf40-NczoQuhyE0vTlJOeE_4Rq5RTuu6Evuuva-TGgs9kmQg0Frp2uJ1eg5SPOKb8vN--qZ63bM6eu4oOJ8RWaBucaE9p-CE4QUQY843tmxu4DyB7B5SQbnZRqE3mXmIsaI9EIbvvGE38NonQQ01vTCxkmmjMUIurFdExSU3h78IAA70QRRuh9w6oyclnqWpdcG1ZbYKmh8b9i8ndCCmPNBr0bBxboSM74GZuwwYkhxWc5b7bPjUnJ1E49CPolz2cCxx2C-H8OQgfJ0uGuqYhW1W0xpriOLFqqNBO0x7oRSZAnHP0GPWFbkruTfI_te1acz8OGb2gVvZQVvDgg8uU6ce7i2uCnmLDx6AOFuP5MFNFHAFRRjMnmiBQ1-bojibsWlhlCk4ps8HjJ0EmDtbJEKx7ag8Vc5ulm356LnfLxgXVZ_3EJI1KCrWDX9gDNzI9bkdeD7FfpYaqhUW-G-oJ-Pl-AyQRkAdSuX_Hlk2X-Xl4etiG27WQmD9t9nLI29776c2W3Vrzi3yd9loXCZov12_f31yPfMpc-4_AMbJYilz4-F0UqXCU4NFouqOrDAcR1z4u291n4L7HBUMzL_hh5hFbVCcj2sdKQ6_EdUKJ70bmUfO9M9aOmi-a5mA7zNZPLomdwxflX-OTK1U="> -->
   </body>
 </html>
