Utilizando DIV para que el contenido no esté desparramado y centrarlo mpas facilmente

--- a/index.html
+++ b/index.html
@@ -15,19 +15,26 @@
     </div>
     <br>
     <hr><br>
-    <h1>Ingeniería Electromecánica</h1>
-    <ul>
-      <li><a href="SIM/index.html">Sistemas Integrados de Manufactura</a></li>
-      <li><a href="SHNP/index.html">Sistemas Hidráulicos y Neumáticos de Potencia</a></li>
-      <li></li>
-      <li></li>
-    </ul>
+    
+    <div class="grid-container">
+      <div class="card">
+        <h1>Ingeniería Electromecánica</h1>
+        <ul>
+          <li><a href="SIM/index.html">Sistemas Integrados de Manufactura</a></li>
+          <li><a href="SHNP/index.html">Sistemas Hidráulicos y Neumáticos de Potencia</a></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </div>
     <hr><br>
-    <h1>Ingeniería Industrial</h1>
-    <ul>
-      <li></li>
-      <li></li>
-    </ul>
+    <div class="grid-container">
+      <h1>Ingeniería Industrial</h1>
+      <ul>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
     <hr><br>
     <h1>Posgrado en Ingeniería Mecatrónica</h1>
     <hr><br>
