Arreglando ingeniería electromecánica

--- a/electromecanica/index.html
+++ b/electromecanica/index.html
@@ -10,19 +10,16 @@
   </head>
   <body>
     <div class="centrar">
-      <h1></h1>
+      <h1>Ingeniería Electromecánica</h1>
     </div>
     <br>
     <hr><br>
 
     <div class="grid-container">
       <div class="card">
-        <h1>Ingeniería Electromecánica</h1>
         <ul>
-          <li><a href="SIM/index.html">Sistemas Integrados de Manufactura</a></li>
-          <li><a href="SHNP/index.html">Sistemas Hidráulicos y Neumáticos de Potencia</a></li>
-          <li></li>
-          <li></li>
+          <li><h2><a href="SIM/index.html">Sistemas Integrados de Manufactura</a></h2></li>
+          <li><h2><a href="SHNP/index.html">Sistemas Hidráulicos y Neumáticos de Potencia</a></h2></li>
         </ul>
       </div>
     </div>
