Arreglando y acomodando el temario

--- a/electromecanica/SIM/index.html
+++ b/electromecanica/SIM/index.html
@@ -12,16 +12,20 @@
     <div class="centrar">
       <h1>Sistemas Integrados de Manufactura</h1>
     </div>
-    <br>
-    <hr>
-    <ul>
-      <li><a href="encuadre/index.html">Encuadre</a></li>
-      <li><a href="temario/index.html">Temario</a></li>
-      <hr>
-      <li><a href="temas/index.html">Temas</a></li>
-    </ul>
-    <hr><br>
-    <a href="#" onclick="history.back()">Volver</a>
+
+    <div class="grid-container">
+      <div class="card">
+        <hr>
+        <ul>
+          <li><a href="encuadre/index.html">Encuadre</a></li>
+          <li><a href="temario/index.html">Temario</a></li>
+          <hr>
+          <li><a href="temas/index.html">Temas</a></li>
+        </ul>
+        <hr><br>
+      </div>
+      <a href="#" onclick="history.back()">Volver</a>
+    </div>
 
   </body>
 </html>
