Arreglando el HEAD en temas

--- a/electromecanica/SIM/temas/index.html
+++ b/electromecanica/SIM/temas/index.html
@@ -1,33 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <style>
-	* {
-      box-sizing: border-box;
-      }
-    body {
-      background-color: lightgray;
-      font-family: Arial;
-      padding: 10px;
-      }
-    .centrar {
-      text-align: center;
-      }
-    td,th{
-      padding: 2px;
-      text-align: left;
-      border: 0px solid;
-      border-color: #444444;
-      }
-    table {
-      width: 75%;
-      padding: 2px;
-      <!-- border-collapse: collapse; -->
-      <!-- border-spacing: 15px; -->
-      <!-- border-color: coral; -->
-      }
-  </style>
+
+  <!-- This will set the viewport of your page, which will give the browser instructions on how to control the page's dimensions and scaling. -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Electromecánica</title>
+  <link rel="stylesheet" href="mystyle.css">
   </head>
+
   <body>
     <div class="centrar">
       <h2>Temas</h2>
