--- a/electromecanica/SIM/temas/index.html
+++ b/electromecanica/SIM/temas/index.html
@@ -13,37 +13,42 @@
     <div class="centrar">
       <h2>Temas</h2>
     </div>
-    <br>
-    <hr>
-    <table>
-      <thead>
-        <tr>
-          <th>Unidad</th>
-          <th>Nombre</th></tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Fundamentos y Preparación de máquinas CNC</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Programación de máquinas CNC mediante códigos G - M y CAD</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Sistema de inspección y almacenes automáticos</td>
-        </tr>
-        <tr>
-           <td>4</td>
-           <td>Robot industrial</td>
-        </tr>
-          <tr>
-          <td>5</td>
-        <td>Integración de celda de Manufactura flexible</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr><br>
+
+|    <div class="grid-container">
+      <div class="card">
+        <hr>
+        <table>
+          <thead>
+            <tr>
+              <th>Unidad</th>
+              <th>Nombre</th></tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Fundamentos y Preparación de máquinas CNC</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Programación de máquinas CNC mediante códigos G - M y CAD</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Sistema de inspección y almacenes automáticos</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Robot industrial</td>
+            </tr>
+              <tr>
+              <td>5</td>
+            <td>Integración de celda de Manufactura flexible</td>
+            </tr>
+          </tbody>
+        </table>
+        <hr><br>
+      </div>
+    </div>
+
   </body>
 </html>
