Arreglando el cascaron para que inicie con DIVs

--- a/electromecanica/SIM/temas/index.html
+++ b/electromecanica/SIM/temas/index.html
@@ -14,7 +14,7 @@
       <h2>Temas</h2>
     </div>
 
-|    <div class="grid-container">
+    <div class="grid-container">
       <div class="card">
         <hr>
         <table>
