--- a/cascaron.html
+++ b/cascaron.html
@@ -13,9 +13,13 @@
     <div class="centrar">
       <h1></h1>
     </div>
-    <br>
-    <hr><br>
 
-    <hr><br>
+    <div class="grid-container">
+      <div class="card">
+        <hr><br>
+        
+        <hr><br>
+      </div>
+    </div>
   </body>
 </html>
