Agregando temas de la unidad 1

--- a/electromecanica/SIM/temas/t1/index.html
+++ b/electromecanica/SIM/temas/t1/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="centrar">
-      <h2>Temas</h2>
+      <h2>1.1 Historia, situación actual y tendencias del CNC</h2>
     </div>
 
     <div class="grid-container">
@@ -20,29 +20,41 @@
         <table>
           <thead>
             <tr>
-              <th>Unidad</th>
+              <th>Tema 1  </th>
               <th>Nombre</th></tr>
           </thead>
           <tbody>
             <tr>
-              <td>1</td>
-              <td>Fundamentos y Preparación de máquinas CNC</td>
+              <td>1.1</td>
+              <td>Historia, situación actual y tendencias del CNC</td>
             </tr>
             <tr>
-              <td>2</td>
-              <td>Programación de máquinas CNC mediante códigos G - M y CAD</td>
+              <td>1.2</td>
+              <td>Partes principales de una maquina CNC</td>
             </tr>
             <tr>
-              <td>3</td>
-              <td>Sistema de inspección y almacenes automáticos</td>
+              <td>1.3</td>
+              <td>Calculo de los parámetros de corte</td>
             </tr>
             <tr>
-              <td>4</td>
-              <td>Robot industrial</td>
+              <td>1.4</td>
+              <td>Maquinas convencionales y CNC</td>
             </tr>
-              <tr>
-              <td>5</td>
-            <td>Integración de celda de Manufactura flexible</td>
+            <tr>
+              <td>1.5</td>
+              <td>Procedimiento para cero maquina en torno y fresadora</td>
+            </tr>
+            <tr>
+              <td>1.6</td>
+              <td>Procedimiento y criterios para determinar el cero pieza en torno y fresadora</td>
+            </tr>
+            <tr>
+              <td>1.7</td>
+              <td>Procedimiento para hacer la compensación de herramientas en torno y fresadora</td>
+            </tr>
+            <tr>
+              <td>1.8</td>
+              <td>Principios y conceptos básicos de seguridad en máquina CNC</td>
             </tr>
           </tbody>
         </table>
