Agregando temas de la unidad 1

--- a/electromecanica/SIM/temas/t1/index.html
+++ b/electromecanica/SIM/temas/t1/index.html
@@ -20,7 +20,7 @@
         <table>
           <thead>
             <tr>
-              <th>Tema 1  </th>
+              <th>Tema</th>
               <th>Nombre</th></tr>
           </thead>
           <tbody>
