--- a/electromecanica/SIM/temas/t1/t1_1/index.html
+++ b/electromecanica/SIM/temas/t1/t1_1/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="centrar">
-      <h2>Unidad 1: Fundamentos y Preparación de máquinas CNC</h2>
+      <h2>1.1 Historia, situación actual y tendencias del CNC</h2>
     </div>
 
     <div class="grid-container">
