Arreglando el acomodo de la unidad 1 a través de las páginas

--- a/electromecanica/SIM/temas/index.html
+++ b/electromecanica/SIM/temas/index.html
@@ -26,7 +26,7 @@
           <tbody>
             <tr>
               <td>1</td>
-              <td><a href="t1/index.html">Fundamentos y Preparación de máquinas CNC</a></td>
+              <td><a href="u1/index.html">Fundamentos y Preparación de máquinas CNC</a></td>
             </tr>
             <tr>
               <td>2</td>
