--- a/electromecanica/SIM/temas/u1/index.html
+++ b/electromecanica/SIM/temas/u1/index.html
@@ -26,7 +26,7 @@
           <tbody>
             <tr>
               <td>1.1</td>
-              <td>Historia, situación actual y tendencias del CNC</td>
+              <td><a href="t1_1/index.html">Historia, situación actual y tendencias del CNC</a></td>
             </tr>
             <tr>
               <td>1.2</td>
