--- a/electromecanica/SIM/temas/u1/t1_1/index.html
+++ b/electromecanica/SIM/temas/u1/t1_1/index.html
@@ -25,36 +25,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>1.1</td>
-              <td>Historia, situación actual y tendencias del CNC</td>
-            </tr>
-            <tr>
-              <td>1.2</td>
-              <td>Partes principales de una maquina CNC</td>
-            </tr>
-            <tr>
-              <td>1.3</td>
-              <td>Calculo de los parámetros de corte</td>
-            </tr>
-            <tr>
-              <td>1.4</td>
-              <td>Maquinas convencionales y CNC</td>
-            </tr>
-            <tr>
-              <td>1.5</td>
-              <td>Procedimiento para cero maquina en torno y fresadora</td>
-            </tr>
-            <tr>
-              <td>1.6</td>
-              <td>Procedimiento y criterios para determinar el cero pieza en torno y fresadora</td>
-            </tr>
-            <tr>
-              <td>1.7</td>
-              <td>Procedimiento para hacer la compensación de herramientas en torno y fresadora</td>
-            </tr>
-            <tr>
-              <td>1.8</td>
-              <td>Principios y conceptos básicos de seguridad en máquina CNC</td>
+              <td><a href="historia/index.html">Historia</a></td>
             </tr>
           </tbody>
         </table>
