Cambios mínimos y se agregó la página de historia

--- a/electromecanica/SIM/temas/u1/t1_1/historia/index.html
+++ b/electromecanica/SIM/temas/u1/t1_1/historia/index.html
@@ -11,16 +11,14 @@
 
   <body>
     <div class="centrar">
-      <h2>1.1 Historia, situación actual y tendencias del CNC</h2>
+      <h1>Historia</h1>
     </div>
 
     <div class="grid-container">
       <div class="card">
         <hr>
-          <ul>
-            <li><a href="historia/index.html">Historia</a></li>
-          </ul>
-          <!-- <input type="checkbox" id="newsletter" name="subscribe" value="yes"><a href="historia/index.html">Historia</a> -->
+        
+        
         <hr><br>
       </div>
     </div>
