--- a/electromecanica/SIM/encuadre/index.html
+++ b/electromecanica/SIM/encuadre/index.html
@@ -10,11 +10,154 @@
   </head>
   <body>
     <div class="centrar">
-      <h1></h1>
+      <h1>ENCUADRE</h1>
+      <h2>Sistemas Integrados de Manufactura</h2>
     </div>
     <br>
     <hr><br>
 
+    <div class="grid-container">
+      <div class="card">
+        <p><a href="#carac">Caracterización de la Asignatura</a></p>
+        <p><a href="#intencion">Intención Didáctica</a></p>
+        <p><a href="#previas">Conmpetencias Previas</a></p>
+        <p><a href="#temario">Temario</a></p>
+        <p><a href="#fuentes">Fuentes de Información</a></p>
+        <p><a href="#software">Software</a></p>
+        <hr>
+        <h3 id="carac">Caracterización de la asignatura</h3>
+        <p>Esta asignatura aporta el perfil profesional del ingeniero electromecánico los elementos necesarios para comprender y plantear soluciones integrales, diseñar y fabricar elementos de máquinas mediante equipos de Control Numérico por Computadora (CNC), operar y programar sistemas de Manufactura Integrada por Computadora (CIM), para la solución de problemas en procesos Industriales.</p>
+        <hr>
+        <h3 id="intencion">Intención didáctica</h3>
+        <p>El estudiante se familiarizará con el manejo de máquinas CNC para el diseño y fabricación de elementos de máquinas. Será capaz de operar y programar las diferentes tecnologías que componen un sistema de manufactura integrada.</p>
+        <p>En el tema uno se abordan los tópicos referentes a historia, clasificación y partes de las máquinas CNC, así como el cálculo de parámetros de corte, puesta a punto de máquinas de control numérico y la normativa de seguridad.</p>
+        <p>En el tema dos se revisa el procedimiento para elaborar una pieza mediante máquinas CNC, considerando cálculo de parámetros, estructura del programa, códigos G y M. Se realiza el maquinado de piezas mediante la programación con CAD- CAM (Diseño Asistido por Computadora – Manufactura Asistido por Computadora), analizando los distintos tipos de maquinados a través de planos mecánicos.</p>
+        <p>Para el tema tres se analizan las características de los sistemas de inspección, así como sus limitantes y requerimientos para su implementación. Se revisa el procedimiento para generar patrones para la inspección de piezas. Se trata además los tópicos referentes a sistemas de almacenamiento automáticos, criterios de codificación y programación de material.</p>
+        <p>En el tema cuatro se establecen los diversos elementos de los manipuladores robóticos además de realizar la programación aplicando los diversos comandos de operación para un robot alimentador de partes en una maquina.</p>
+        <p>En el tema cinco se realiza la comunicación entre las distintas estaciones de la celda de manufactura para así programar la producción, además de interpretar y monitorear señales del proceso y puesta en marcha de las estaciones.</p>
+      </div>
+      <div class="card">
+          <h3 id="previas">Competencias previas</h3>
+          <ul>
+            <li>Identifica los procesos que provocan el desprendimiento de viruta.</li>
+            <li>Comprende los fundamentos del proceso de cortes de metales.</li>
+            <li>Interpreta planos mecánicos y normas de dibujo.</li>
+            <li>Usa apropiadamente diversos instrumentos de medición y sistemas de unidades</li>
+            <li>Domina los sistemas de coordenadas rectangulares y polares, trigonometría.</li>
+            <li>Concepto de velocidad angular y velocidad tangencial.</li>
+            <li>Aplica el concepto de algoritmo.</li>
+            <li>Identifica las propiedades de los materiales.</li>
+            <li>Domina el lenguaje de programación de Autómatas programables.</li>
+            <li>Aplicas normas de seguridad industrial y ambiental.</li>
+            <li>Identifica y aplica los conceptos básicos de Neumática e Hidráulica.</li>
+          </ul>
+      </div>      
+      <div class="card">
+        <hr>  
+        <h3 id="temario"><a href="https://www.lerdo.tecnm.mx/images/descargas/reticulas/IEME-2010-210/05_sistemas_integrados_manufactura_26072022.pdf">Temario</a></h3>
+        <h4 id="fundamentos-y-preparacion-de-maquinas-cnc">1. Fundamentos y Preparación de máquinas CNC</h4>
+        <ul>
+        <li>1.1 Historia, situación actual y tendencias del CNC.</li>
+        <li>1.2 Partes principales de una maquina CNC.</li>
+        <li>1.3 Calculo de los parámetros de corte.</li>
+        <li>1.4 Maquinas convencionales y CNC.</li>
+        <li>1.5 Procedimiento para cero maquina en torno y fresadora.</li>
+        <li>1.6 Procedimiento y criterios para determinar el cero pieza en torno y fresadora.</li>
+        <li>1.7 Procedimiento para hacer la compensación de herramientas en torno y fresadora.</li>
+        <li>1.8 Principios y conceptos básicos de seguridad en máquina CNC</li>
+        </ul>
+        <h4 id="programacion-de-maquinas-cnc-mediante-codigos-g-m-y-cad">2. Programación de máquinas CNC mediante códigos G - M y CAD</h4>
+        <ul>
+          <li>2.1 Procedimiento para la elaboración de una pieza en una máquina CNC.</li>
+          <li>2.2 Calculo de los parámetros de corte.</li>
+          <li>2.3 Programación mediante códigos G y M.
+            <ul>
+              <li>2.3.1 Estructura de un programa CNC.</li>
+              <li>2.3.2 Códigos G de programación.</li>
+              <li>2.3.3 Códigos M, S, T y F.</li>
+              <li>2.3.4 Códigos de parámetros de corte.</li>
+              <li>2.3.5 Códigos de subrutinas.</li>
+              <li>2.3.6 Ciclos enlatados.</li>
+            </ul>
+          </li>
+          <li>2.4 Programación con CAD-CAM
+            <ul>
+              <li>2.4.1 Manejo de la pantalla.</li>
+              <li>2.4.2 Planos Mecánicos en 2d y 3d.</li>
+              <li>2.4.3 Tipos de maquinados.</li>
+              <li>2.4.5 Simulación de maquinado.</li>
+              <li>2.4.6 Cambiar a control numérico.</li>
+              <li>2.4.7 Ejecución y edición en post procesador.</li>
+              <li>2.4.8 Enviar programa a máquina CNC.</li>
+              <li>2.4.9 Maquinado de pieza.</li>
+            </ul>
+          </li>
+        </ul>
+        <h4 id="sistema-de-inspeccion-y-almacenes-automaticos">3. Sistema de inspección y almacenes automáticos</h4>
+        <ul>
+          <li>3.1 Sistemas de inspección
+            <ul>
+              <li>3.1.1 Principios y limitaciones de un sistema de inspección con visión.</li>
+              <li>3.1.2 Condiciones ambientales del área de inspección.</li>
+              <li>3.1.3 Generación de patrones de inspección.</li>
+              <li>3.1.4 Inspección de piezas.</li>
+            </ul>
+          </li>
+          <li>3.2 Almacenes automáticos
+            <ul>
+              <li>3.2.1 Criterios de codificación.</li>
+              <li>3.2.2 Programación de materiales con:</li>
+              <li>3.2.2.1 Motores de DC.</li>
+              <li>3.2.2.2 Motores de pasos.</li>
+              <li>3.2.2.3 Servomotores</li>
+            </ul>
+          </li>
+        </ul>
+        <h4 id="robot-industrial">4. Robot industrial</h4>
+          <ul>
+            <li>4.1 Introducción.</li>
+            <li>4.2 Clasificación general de los sistemas robotizados.</li>
+            <li>4.3 Morfología de los robots manipuladores.</li>
+            <li>4.4 Sistemas de coordenadas en robots manipuladores.</li>
+            <li>4.5 Programación y control de manipuladores industriales.</li>
+            <li>4.6 Comunicación de robot con dispositivos de control.</li>
+          </ul>
+        <h4 id="integracion-de-celda-de-manufactura-flexible">5. Integración de celda de Manufactura flexible</h4>
+          <ul>
+            <li>5.1 Comunicación entre las estaciones de la celda. Programación de producción.</li>
+            <li>5.2 Interpretación y monitoreo de señales del proceso.</li>
+            <li>5.3 Arranque de cada una de las estaciones de la celda Robots.</li>
+          </ul>
+      </div>
+      <div class="card">
+        <h2 id="fuentes">Fuentes de información</h2>
+          <ul>
+            <li><a href="https://archive.org/details/tecnologiadelasm0000krar">Krar, Check. <em>"Tecnología de las maquinas herramienta"</em>, Ed. Alfaomega.</a></li>
+            <li>Groover, M. P. *"Fundamentos de manufactura moderna"*, Ed. Prentice may.</li>
+            <li>*Manuales del CIM y de las máquinas CNC*</li>
+            <li>Morpin P. J. *"Sistemas CAD/CAM/CAE, Diseño y Fabricación por Computador"*, Marcombo</li>
+          </ul>
+          <ul>
+            <li>James J. *"Numerical Control Part Programming"*, Industrial Press.</li>
+            <li>Antonio Barrientos, Balaguer Carlos. *"Fundamentos de Robotica"*, McGraw-Hill.</li>
+            <li>Mc Mahon, Ch., Browne, J. *"CAD/CAM: Principles, Practice and Manufacturing Management"*, Addison-Wesley.</li>
+          </ul>
+          <hr>
+          <ul>
+            <li><a href="https://archive.org/details/cncforindustryby0000kief/mode/2up">Hans B. Keif, <em>"CNC for industry".</em> Modern Machine Shop Publications.</a>  </li>
+          </ul>
+          <hr>
+          <h3 id="software">Software</h3>
+          <ul>
+           <li>VISI-CAD</li>
+           <li>WVUNIC</li>
+           <li>ROBCOMM3</li>
+           <li>LMODSOFT</li>
+           <li>ISPO</li>
+           <li>Programación CNC</li>
+          </ul>
+      </div>
+    </div>
     <hr><br>
     <a href="#" onclick="history.back()">Volver</a>
 
