--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
 
   <!-- This will set the viewport of your page, which will give the browser instructions on how to control the page's dimensions and scaling. -->
