Actualizando el tema 1

--- a/electromecanica/SIM/temas/u1/t1_1/index.html
+++ b/electromecanica/SIM/temas/u1/t1_1/index.html
@@ -18,6 +18,15 @@
       <div class="card">
         <hr>
           <ul>
+            <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/lMl3hLBuRoJolHJvnP0PvY">Introducción a las Máquinas-Herramienta</a></li>
+            <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/uoAVA3ZGMTlB8VFHFGjboL">Historia de las Máquinas</a></li>
+            <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/2YbmVTCce6nSL0LjzQgvg6">Máquinas Herramientas Comúnes</a></li>
+            <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/FJQ24wQ3IhShjcwYPwOaHn">MÁQUINAS-HERRAMIENTA ESTÁNDAR</a></li>
+            <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/5ccOv7nWfr2ydp0BBpDQy3">MÁQUINAS DE CONTROL NUMÉRICO POR COMPUTADORA</a></li>
+            <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/zrXdRTGSVmewL6MCk3rgKe">DESARROLLOS PRINCIPALES DE LA METALMECÁNICA DURANTE LOS ÚLTIMOS CINCUENTA AÑOS</a></li>
+            <hr>
+            <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/JyKR8rCWPHQUGshFuCZovU">Hitos del desarrollo del control numérico</a></li>
+            <hr>
             <li><a href="historia/index.html">Historia</a></li>
           </ul>
           <!-- <input type="checkbox" id="newsletter" name="subscribe" value="yes"><a href="historia/index.html">Historia</a> -->
