Se modifica la página principal de SHNP

--- a/electromecanica/SHNP/index.html
+++ b/electromecanica/SHNP/index.html
@@ -11,11 +11,21 @@
 
   <body>
     <div class="centrar">
-      <h1></h1>
+      <h1>Sistemas Hidráulicos y Neumáticos de Potencia</h1>
     </div>
-    <br>
-    <hr><br>
 
-    <hr><br>
+    <div class="grid-container">
+      <div class="card">
+        <hr>
+        <ul>
+          <li><a href="encuadre.html">Encuadre</a></li>
+          <hr>
+          <li><a href="temas.html">Temas</a></li>
+        </ul>
+        <hr><br>
+      </div>
+      <a href="#" onclick="history.back()">Volver</a>
+    </div>
+
   </body>
 </html>
