Se agregó el tema 1.1 y se agregaron fuentes de info al encuadre

--- a/electromecanica/SHNP/encuadre.html
+++ b/electromecanica/SHNP/encuadre.html
@@ -59,9 +59,59 @@
       </div>
       <div class="card">
         <h2 id="fuentes">Fuentes de información</h2>
+          <ol>
+            <li>Merkle, B. Shrader, M. Thomes. Hidráulica. Manual de estudio. Festo Didactic.</li>
+            <li>Merkle, K. Rupp. Electrohidráulica. Festo Didactic..</li>
+            <li>Vickers. Manual de Hidráulica Industrial.</li>
+            <li>Grad A. Schmitt. Training Hidráulica. Libro de información y enseñanza de la hidráulica. G. L. Rexroth GmbH.</li>
+            <li>Michael J. Pinches, Jhon G. Ashby. Power Hidraulics. Editorial Prentice Hall.</li>
+            <li>Hydraulic Handbook. Gulf Publishing Company.</li>
+            <li>Festo Didactic. Neumática . Manual de estudio.</li>
+            <li>Deppert, K. Stoll. Aplicaciones en la neumática. Editorial Marcombo.</li>
+            <li>Deppert, K. Stoll. Dispositivos neumáticos. Editorial Marcombo.</li>
+            <li>Antonio Gillen Salvador. Introducción a la neumática. México: Alfaomega Marcombo.</li>
+            <li>Meixner , R. Kobler. Inicialización al personal de montaje y mantenimiento. Festo Didactic.</li>
+            <li>Maixner, E. Sauer. Introducción a la electroneumática. Fesro Didactic.</li>
+            <li>José Manuel Gea, Vicent Llanodosa. Circuitos básicos de ciclos neumáticos y electroneumáticos. Editorial Alfaomega Marcombo.</li>
+            <li>Hasebrink, R. Kobler. Introducción a la técnica neumática de mando. Festo Didactic.</li>
+            <li>Salvador Millán. Calculo y diseño de circuitos en aplicaciones neumáticas. Editorial Alfaomega Marcombo.</li>
+            <li>Ackerman, J. Franz, T. Hartmann, A. Hopf, M. Kantel, B. Plagemann. Controles lógicos programables. Festo Didactic.</li>
+            <li>Joseph Balcells. Autómatas programables. Editorial Alfaomega Marcombo.</li>
+            <li>Manual del software de programación del PLC.</li>
+            <li>Manual del software de simulación de circuitos neumáticos e hidráulicos.</li>
+            <li>Eber, S Nestel. Sensores para la técnica de proceso y manipulación. Festo</li>
+            <li><a href="http://bc.unam.mx/index-alterno.html">http://bc.unam.mx/index-alterno.html</a> (base de datos de tesis de la UNAM).</li>
+            <li><a href="http://www.universia.net.mx/">http://www.universia.net.mx/</a> (portal de universidades mexicanas).</li>
+          </ol>
           <ul>
             <li><a href="https://archive.org/details/tecnologiadelasm0000krar">Autor <em>""</em>, Ed. .</a></li>
           </ul>
+          <h3 id="libros-introductorios-y-manuales">Libros introductorios y manuales</h3>
+          <ol>
+            <li><strong>Neumática Básica – FESTO Didactic.</strong>  Muy utilizado en cursos de formación. Explica principios físicos, simbología, componentes básicos y circuitos</li>
+            <li><strong>Tecnología Neumática</strong> – Peter Croser, Frank </li>
+            <li>Manual técnico con buena combinación de teoría y práctica, con ejemplos de aplicaciones industriales.</li>
+            <li><strong>Electroneumática – Joachim Dorn, Gerhard Popp.</strong>  Aunque más enfocado en la parte eléctrica, empieza con fundamentos de neumática y después combina con sistemas de control.</li>
+            <li><strong>Hidráulica y Neumática</strong> – Andrew Parr</li>
+            <li>Libro clásico y muy didáctico. Introduce los principios básicos, componentes y aplicaciones prácticas.</li>
+            <li><strong>Neumática e Hidráulica</strong> – Antonio Creus Solé</li>
+            <li>Expone conceptos fundamentales y aplicaciones en mantenimiento y operación de sistemas.</li>
+            <li><strong>Neumática Industrial: Fundamentos y aplicaciones</strong> – Ángel Poveda Martínez</li>
+            <li>Enfocado en aplicaciones industriales, con ejercicios y esquemas de circuitos básicos.</li>
+          </ol>
+          <hr>
+          <h3 id="libros-de-apoyo-para-formacion-tecnica">Libros de apoyo para formación técnica</h3>
+          <ol>
+            <li><strong>Automatización Neumática y Electroneumática</strong> – Manfred Lucas </li>
+            <li>Explica paso a paso circuitos básicos, simbología y principios de automatización.</li>
+            <li><strong>Hidráulica y Neumática. Sistemas y Aplicaciones</strong> – Majumdar, S.R.
+            <li>Profundiza más, pero incluye una sección inicial accesible para quienes inician.</li>
+            <li><strong>Manual de Neumática</strong> – Bosch Rexroth
+            <li>Guía clara sobre componentes, circuitos y principios físicos.</li>
+            <li><strong>Neumática. Guía de Aprendizaje</strong> – SMC</li>
+            <li>Similar al de FESTO, orientado a cursos técnicos, con muchos ejercicios prácticos.</li>
+          </ol>
+          <hr>
           <ul>
             <li>...</li>
           </ul>
