--- a/electromecanica/SHNP/t1_1.html
+++ b/electromecanica/SHNP/t1_1.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="centrar">
-      <h2>1.1 Historia, situación actual y tendencias del CNC</h2>
+      <h2>1.1 Conceptos básicos de la neumática</h2>
     </div>
 
     <div class="grid-container">
