--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- This will set the viewport of your page, which will give the browser instructions on how to control the page's dimensions and scaling. -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Paco Ruvalcaba</title>
+  <title>Paco Ruvalcaba G.</title>
   <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
