--- a/electromecanica/SIM/temas/u1/t1_1/index.html
+++ b/electromecanica/SIM/temas/u1/t1_1/index.html
@@ -22,15 +22,17 @@
             <h2>Recursos</h2>
               <ul>
                 <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/lMl3hLBuRoJolHJvnP0PvY">Introducción a las Máquinas-Herramienta</a></li>
-                <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/uoAVA3ZGMTlB8VFHFGjboL">Historia de las Máquinas</a></li>
-                <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/2YbmVTCce6nSL0LjzQgvg6">Máquinas Herramientas Comúnes</a></li>
-                <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/FJQ24wQ3IhShjcwYPwOaHn">MÁQUINAS-HERRAMIENTA ESTÁNDAR</a></li>
-                <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/5ccOv7nWfr2ydp0BBpDQy3">MÁQUINAS DE CONTROL NUMÉRICO POR COMPUTADORA</a></li>
-                <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/zrXdRTGSVmewL6MCk3rgKe">DESARROLLOS PRINCIPALES DE LA METALMECÁNICA DURANTE LOS ÚLTIMOS CINCUENTA AÑOS</a></li>
+                  <ul>
+                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/uoAVA3ZGMTlB8VFHFGjboL">Historia de las Máquinas</a></li>
+                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/2YbmVTCce6nSL0LjzQgvg6">Máquinas Herramientas Comúnes</a></li>
+                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/FJQ24wQ3IhShjcwYPwOaHn">MÁQUINAS-HERRAMIENTA ESTÁNDAR</a></li>
+                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/5ccOv7nWfr2ydp0BBpDQy3">MÁQUINAS DE CONTROL NUMÉRICO POR COMPUTADORA</a></li>
+                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/zrXdRTGSVmewL6MCk3rgKe">DESARROLLOS PRINCIPALES DE LA METALMECÁNICA DURANTE LOS ÚLTIMOS CINCUENTA AÑOS</a></li>                
+                  </ul>
                 <hr>
                 <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/JyKR8rCWPHQUGshFuCZovU">Hitos del desarrollo del control numérico</a></li>
                 <hr>
-                <li><a href="historia/index.html">Historia</a></li>
+                <li><del><a href="historia/index.html">Historia</a></del></li>
               </ul>
             <!-- <li>Presentaciones</li> -->
             <h2>Presentaciones</h2>
