Arreglando la sección de Notas, recursos y presentaciones del primer tema

--- a/electromecanica/SIM/temas/u1/t1_1/index.html
+++ b/electromecanica/SIM/temas/u1/t1_1/index.html
@@ -1,50 +1,59 @@
-<!DOCTYPE html>
-<html>
-  <head>
+  <!DOCTYPE html>
+  <html>
+    <head>
 
-  <!-- This will set the viewport of your page, which will give the browser instructions on how to control the page's dimensions and scaling. -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- This will set the viewport of your page, which will give the browser instructions on how to control the page's dimensions and scaling. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Electromecánica</title>
-  <link rel="stylesheet" href="mystyle.css">
-  </head>
+    <title>Electromecánica</title>
+    <link rel="stylesheet" href="mystyle.css">
+    </head>
 
-  <body>
-    <div class="centrar">
-      <h2>1.1 Historia, situación actual y tendencias del CNC</h2>
-    </div>
-
-    <div class="grid-container">
-      <div class="card">
-        <hr>
-          <!-- <ul> -->
-            <!-- <li>Recursos</li> -->
-            <h2>Recursos</h2>
-              <ul>
-                <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/lMl3hLBuRoJolHJvnP0PvY">Introducción a las Máquinas-Herramienta</a></li>
-                  <ul>
-                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/uoAVA3ZGMTlB8VFHFGjboL">Historia de las Máquinas</a></li>
-                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/2YbmVTCce6nSL0LjzQgvg6">Máquinas Herramientas Comúnes</a></li>
-                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/FJQ24wQ3IhShjcwYPwOaHn">MÁQUINAS-HERRAMIENTA ESTÁNDAR</a></li>
-                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/5ccOv7nWfr2ydp0BBpDQy3">MÁQUINAS DE CONTROL NUMÉRICO POR COMPUTADORA</a></li>
-                    <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/zrXdRTGSVmewL6MCk3rgKe">DESARROLLOS PRINCIPALES DE LA METALMECÁNICA DURANTE LOS ÚLTIMOS CINCUENTA AÑOS</a></li>                
-                  </ul>
-                <hr>
-                <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/JyKR8rCWPHQUGshFuCZovU">Hitos del desarrollo del control numérico</a></li>
-                <hr>
-                <li><del><a href="historia/index.html">Historia</a></del></li>
-              </ul>
-            <!-- <li>Presentaciones</li> -->
-            <h2>Presentaciones</h2>
-              <ul>
-                <li></li>
-                <li></li>
-              </ul>
-          <!-- </ul> -->
-          <!-- <input type="checkbox" id="newsletter" name="subscribe" value="yes"><a href="historia/index.html">Historia</a> -->
-        <hr><br>
+    <body>
+      <div class="centrar">
+        <h2>1.1 Historia, situación actual y tendencias del CNC</h2>
       </div>
-    </div>
 
-  </body>
-</html>
+      <div class="grid-container">
+        <div class="card">
+          <hr>
+            <!-- <ul> -->
+              <!-- <li>Recursos</li> -->
+              <h2>Apuntes</h2>
+                <ul>
+                  <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/lMl3hLBuRoJolHJvnP0PvY">Introducción a las Máquinas-Herramienta</a></li>
+                    <ul>
+                      <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/uoAVA3ZGMTlB8VFHFGjboL">Historia de las Máquinas</a></li>
+                      <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/2YbmVTCce6nSL0LjzQgvg6">Máquinas Herramientas Comúnes</a></li>
+                      <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/FJQ24wQ3IhShjcwYPwOaHn">MÁQUINAS-HERRAMIENTA ESTÁNDAR</a></li>
+                      <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/5ccOv7nWfr2ydp0BBpDQy3">MÁQUINAS DE CONTROL NUMÉRICO POR COMPUTADORA</a></li>
+                      <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/zrXdRTGSVmewL6MCk3rgKe">DESARROLLOS PRINCIPALES DE LA METALMECÁNICA DURANTE LOS ÚLTIMOS CINCUENTA AÑOS</a></li>                
+                    </ul>
+                  <hr>
+                  <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/JyKR8rCWPHQUGshFuCZovU">Hitos del desarrollo del control numérico</a></li>
+                  <hr>
+                  <li><del><a href="historia/index.html">Historia</a></del></li>
+                </ul>
+              <!-- <li>Presentaciones</li> -->
+              <h2>Presentaciones</h2>
+                <ul>
+                  <li></li>
+                  <li></li>
+                </ul>
+              <h2>Recursos</h2>
+                <ul>
+                  <li><a href="https://archive.org/details/tecnologiadelasm0000krar/page/n5/mode/2up"><em>Tecnología de las máquinas-herramienta</em> de Krar y Check</a></li>
+                  <hr>
+                  <li><a href="https://www.inter2000mecanizados.com/post/historia-de-los-cnc">HISTORIA DE LOS CNC</a></li>
+                  <li><a href="">Link</a></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+            <!-- </ul> -->
+            <!-- <input type="checkbox" id="newsletter" name="subscribe" value="yes"><a href="historia/index.html">Historia</a> -->
+          <hr><br>
+        </div>
+      </div>
+
+    </body>
+  </html>
