Se agregaron icónos para identificar los recursos

--- a/electromecanica/SIM/temas/u1/t1_1/index.html
+++ b/electromecanica/SIM/temas/u1/t1_1/index.html
@@ -21,7 +21,7 @@
               <!-- <li>Recursos</li> -->
               <h2>Apuntes</h2>
                 <ul>
-                  <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/lMl3hLBuRoJolHJvnP0PvY">Introducción a las Máquinas-Herramienta</a></li>
+                  <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/lMl3hLBuRoJolHJvnP0PvY">📘Introducción a las Máquinas-Herramienta</a></li>
                     <ul>
                       <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/uoAVA3ZGMTlB8VFHFGjboL">Historia de las Máquinas</a></li>
                       <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/2YbmVTCce6nSL0LjzQgvg6">Máquinas Herramientas Comúnes</a></li>
@@ -30,7 +30,7 @@
                       <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/zrXdRTGSVmewL6MCk3rgKe">DESARROLLOS PRINCIPALES DE LA METALMECÁNICA DURANTE LOS ÚLTIMOS CINCUENTA AÑOS</a></li>                
                     </ul>
                   <hr>
-                  <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/JyKR8rCWPHQUGshFuCZovU">Hitos del desarrollo del control numérico</a></li>
+                  <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/JyKR8rCWPHQUGshFuCZovU">📘Hitos del desarrollo del control numérico</a></li>
                   <hr>
                   <li><del><a href="historia/index.html">Historia</a></del></li>
                 </ul>
@@ -42,10 +42,10 @@
                 </ul>
               <h2>Recursos</h2>
                 <ul>
-                  <li><a href="https://archive.org/details/tecnologiadelasm0000krar/page/n5/mode/2up"><em>Tecnología de las máquinas-herramienta</em> de Krar y Check</a></li>
+                  <li><a href="https://archive.org/details/tecnologiadelasm0000krar/page/n5/mode/2up">📘<em>Tecnología de las máquinas-herramienta</em> de Krar y Check</a></li>
                   <hr>
-                  <li><a href="https://www.inter2000mecanizados.com/post/historia-de-los-cnc">HISTORIA DE LOS CNC</a></li>
-                  <li><a href="">Link</a></li>
+                  <li><a href="https://www.inter2000mecanizados.com/post/historia-de-los-cnc">🔗HISTORIA DE LOS CNC</a></li>
+                  <!-- <li><a href="">Link</a></li> -->
                   <li></li>
                   <li></li>
                 </ul>
