Se agregó un link de un PDF al libro de Groover

--- a/electromecanica/SIM/encuadre/index.html
+++ b/electromecanica/SIM/encuadre/index.html
@@ -133,7 +133,7 @@
         <h2 id="fuentes">Fuentes de información</h2>
           <ul>
             <li><a href="https://archive.org/details/tecnologiadelasm0000krar">Krar, Check. <em>"Tecnología de las maquinas herramienta"</em>, Ed. Alfaomega.</a></li>
-            <li>Groover, M. P. *"Fundamentos de manufactura moderna"*, Ed. Prentice may.</li>
+            <li><a href="https://campus.ucsfvirtual.edu.ar/pluginfile.php/787339/mod_resource/content/1/Fundamentos%20de%20manufactura%20moderna%20%28%20PDFDrive%20%29.pdf">Groover, M. P. <em>"Fundamentos de manufactura moderna"</em>, Ed. Prentice may.</a></li>
             <li>*Manuales del CIM y de las máquinas CNC*</li>
             <li>Morpin P. J. *"Sistemas CAD/CAM/CAE, Diseño y Fabricación por Computador"*, Marcombo</li>
           </ul>
