Se agregó otro enlace a un libro en las referencias

--- a/electromecanica/SIM/encuadre/index.html
+++ b/electromecanica/SIM/encuadre/index.html
@@ -144,7 +144,8 @@
           </ul>
           <hr>
           <ul>
-            <li><a href="https://archive.org/details/cncforindustryby0000kief/mode/2up">Hans B. Keif, <em>"CNC for industry".</em> Modern Machine Shop Publications.</a>  </li>
+            <li><a href="https://archive.org/details/cncforindustryby0000kief/mode/2up">Hans B. Keif, <em>"CNC for industry".</em> Modern Machine Shop Publications.</a></li>
+            <li><a href="https://es.scribd.com/doc/287012029/CNC-Programming-Handbook-by-Peter-Smid-pdf-pdf#download">Peter Smid,<em>"CNC Programming Handbook".</em> Industrial Press Inc.</a></li>
           </ul>
           <hr>
           <h3 id="software">Software</h3>
