Agregando lista de verificación con links

--- a/electromecanica/SIM/index.html
+++ b/electromecanica/SIM/index.html
@@ -20,6 +20,8 @@
           <li><a href="encuadre/index.html">Encuadre</a></li>
           <hr>
           <li><a href="temas/index.html">Temas</a></li>
+          <hr>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/5ZTTFooEc6I96tArGweYY0">Temas 2</a></li>
         </ul>
         <hr><br>
       </div>
