--- a/electromecanica/SHNP/encuadre.html
+++ b/electromecanica/SHNP/encuadre.html
@@ -27,9 +27,15 @@
         <p><a href="#software">Software</a></p>
         <hr>
         <h3 id="carac">Caracterización de la asignatura</h3>
-        <p>...</p>
+        <p>Esta asignatura aporta al perfil del Ingeniero Electromecánico la capacidad para explicar fenómenos involucrados en los procesos de interpretar, seleccionar, mantener, controlar y diseñar en forma óptima los circuitos neumáticos e hidráulicos automatizados por medios mecánicos, eléctricos, electrónicos y participar en la generación de proyectos de investigación para la automatización con el uso de tecnologías modernas en beneficio de la sociedad. </p>
         <hr>
         <h3 id="intencion">Intención didáctica</h3>
+        <p>El temario está organizado en seis unidades, agrupando los conceptos básicos de la asignatura en las cuatro primeras unidades; para que posteriormente en la unidad cinco permitir que el alumno aplique mediante elementos electrónicos de automatización, las competencias adquiridas en las primeras unidades y finalmente en la unidad seis conozca la forma en que se diseña y desarrolla un proyecto.</p>
+        <p>En la primera unidad se abordan los principios físicos aplicados a los sistemas hidráulicos y neumáticos, así como su simbología usada para la descripción de estos sistemas.</p>
+        <p>Se aborda en la segunda unidad la forma en que es producida, distribuida y controlada la energía obtenida de forma neumática e hidráulica.</p>
+        <p>En las unidades tres y cuatro respectivamente, se desarrollan los temas relacionados con el diseño y análisis de circuitos neumáticos y circuitos hidráulicos sencillos, así como el análisis de circuitos controlados eléctricamente como sucede actualmente en la mayoría de las aplicaciones reales. </p>
+        <p>Posteriormente en la unidad cinco se pretende que el alumno adquiera la capacidad de desarrollar y analizar circuitos neumáticos e hidráulicos de sistemas automatizados, controlados principalmente mediante controladores lógicos programables.</p>
+        <p>Es menester que un ingeniero electromecánico adquiera y tenga la capacidad de desarrollar proyectos de ingeniería relacionados con sistemas hidráulicos y neumáticos de potencia, contemplados en la unidad seis.</p>
         <p>...</p>
         <p>...</p>
         <p>...</p>
