--- a/electromecanica/index.html
+++ b/electromecanica/index.html
@@ -18,6 +18,7 @@
     <div class="grid-container">
       <div class="card">
         <ul>
+          <li><h2><a href="SIM/index.html">Instalaciones Eléctricas</a></h2></li>
           <li><h2><a href="SIM/index.html">Sistemas Integrados de Manufactura</a></h2></li>
           <li><h2><a href="SHNP/index.html">Sistemas Hidráulicos y Neumáticos de Potencia</a></h2></li>
         </ul>
