--- a/electromecanica/IE/index.html
+++ b/electromecanica/IE/index.html
@@ -17,12 +17,12 @@
       <div class="card">
         <hr>
         <ul>
-          <li><a href="encuadre/index.html">Encuadre</a></li>
-          <hr>
-          <li><a href="temas/index.html">Temas</a></li>
-          <hr>
-          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/5ZTTFooEc6I96tArGweYY0">Temas 2</a></li>
-        </ul>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/kvTXaer0Uq4IBArOzBAN6I">Caracterización de la asginatura</a></li>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/qIWVmxaTeZJRbems6XjKzv">Intención didáctica</a></li>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/4JLAnaVEeb5SyfHPkgleiD"></a> COMPETENCIAS A DESARROLLAR</li>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/hYLID8QAbKg7El1pUIU488"></a>Objetivo General del Curso</li>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/Q7J18piixFANlwKFix85So"></a>Competencias Previas</li>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/0HQJI6JkRxtwFAR0swewce"></a>Temario</li>        </ul>
         <hr><br>
       </div>
       <a href="#" onclick="history.back()">Volver</a>
