--- a/electromecanica/IE/index.html
+++ b/electromecanica/IE/index.html
@@ -19,10 +19,11 @@
         <ul>
           <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/kvTXaer0Uq4IBArOzBAN6I">Caracterización de la asginatura</a></li>
           <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/qIWVmxaTeZJRbems6XjKzv">Intención didáctica</a></li>
-          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/4JLAnaVEeb5SyfHPkgleiD"></a> COMPETENCIAS A DESARROLLAR</li>
-          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/hYLID8QAbKg7El1pUIU488"></a>Objetivo General del Curso</li>
-          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/Q7J18piixFANlwKFix85So"></a>Competencias Previas</li>
-          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/0HQJI6JkRxtwFAR0swewce"></a>Temario</li>        </ul>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/4JLAnaVEeb5SyfHPkgleiD">COMPETENCIAS A DESARROLLAR</a></li>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/hYLID8QAbKg7El1pUIU488">Objetivo General del Curso</a></li>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/Q7J18piixFANlwKFix85So">Competencias Previas</a></li>
+          <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/0HQJI6JkRxtwFAR0swewce">Temario</a></li>
+        </ul>
         <hr><br>
       </div>
       <a href="#" onclick="history.back()">Volver</a>
