--- a/electromecanica/SHNP/t1_1.html
+++ b/electromecanica/SHNP/t1_1.html
@@ -21,7 +21,7 @@
             <!-- <li>Recursos</li> -->
             <h2>Recursos</h2>
               <ul>
-                <li><a href="https://yjxgm4nnyy.joplinusercontent.com/shares/lMl3hLBuRoJolHJvnP0PvY">Introducción a ...</a></li>
+                <li><a href="">Introducción a ...</a></li>
                 <li><a href=""></a></li>
                 <hr>
                 <li><a href=""></a></li>
