--- a/electromecanica/SHNP/t1_1.html
+++ b/electromecanica/SHNP/t1_1.html
@@ -21,7 +21,7 @@
             <!-- <li>Recursos</li> -->
             <h2>Recursos</h2>
               <ul>
-                <li><a href="">Introducción a ...</a></li>
+                <li><a href="https://paco-ruvalcaba.github.io/tec2/CIM_2_1_Neum%C3%A1tica">Neumática</a></li>
                 <li><a href=""></a></li>
                 <hr>
                 <li><a href=""></a></li>
